[package]
name = "mevworld"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mevworld"
test = false

[dependencies]
anyhow = "1.0.79"
tokio = { version = "1.36", features = ["macros", "signal", "rt-multi-thread", "sync"] }
eyre = "0.6.12"
log = "0.4.21"
env_logger = "0.11.3"
clang = "2.0.0"
proptest = "1.4.0"
clang-sys = "1.8.1"
criterion = "0.5"
lazy_static = "1.4.0"
block-db = "0.2.0"
blockstate = "0.1.0"
winit = "0.30.10"
futures = { version = "0.3.31", features = ["executor"] }
reqwest = { version = "0.12.3", features = ["json", "gzip", "blocking", "stream"] }
hyper = { version = "1.3.0", features = ["client"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.11", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1.1"
bytes = "1.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
once_cell = "1.21.3"
sha2 = "0.10.8"
rustc-hash = "2.1.1"
uniswap-v3-sdk = "4.3.0"
chrono = "0.4.41"

# Alloy (Ethereum Types, EIPs, Primitives, etc.)
alloy = { version = "0.15.6", features = ["full"] }
alloy-contract = "0.15.6"
alloy-consensus = "0.15.6"
alloy-eips = "0.15.6"

enr = "0.13.0"
zerocopy = "0.8.25-alpha.3"
# Macro, Logging, Error handling
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_derive = "1.0.197"
thiserror = "1.0.50"

# Alloy additional crates (sol-types + http transports)
alloy-sol-types = { version = "1.0.0", features = ["std"] }
alloy-transport-http = { version = "0.15.6", features = ["reqwest"] }

# REVM + Precompile Logic
revm = { version = "22.0.1", features = ["alloydb"] }
revm-inspectors = "0.20.1"


# Other utilities
futures-util = "0.3"
rayon = "1.10.0"
petgraph = "0.8.1"
dashmap = "6.1.0"
foldhash = "0.1.3"
dotenv = "0.15.0"
procmac = "0.1.0"
proc-macro-crate = "3.3.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.67"
proc-macro-error-attr = "1.0.4"
proc-macro-error-attr2 = "2.0.0"
# External project used
pool-sync = { git = "https://github.com/Zacholme7/PoolSync" }

# Optional DB support (can remove if unused)
essential-node-db-sql = "0.5.0"

# Added hex crate for encoding/decoding
hex = "0.4"
k256 = "0.13.4"
tiny-keccak = "2.0"
uniswap_v3_math = "=0.6.0"
rust-assistant = "0.5.0"
fxhash = "0.2.1"
url = "2.5.4"

